--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,13 @@
   "product": {
     "freshdesk": {
       "location": {
-        "ticket_sidebar": {
+        "full_page_app": {
           "url": "index.html",
           "icon": "styles/images/icon.svg"
         }
+      },
+      "requests": {
+        "getFakeStoreProducts": {}
       }
     }
   },
